; ModuleID = '/home/carl/AnghaBench/zfs/lib/libshare/extr_smb.c_smb_disable_share_one.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libshare/extr_smb.c_smb_disable_share_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NET_CMD_PATH = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [3 x i8] c"-S\00", align 1
@NET_CMD_ARG_HOST = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"usershare\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"delete\00", align 1
@SA_SYSTEM_ERR = common dso_local global i32 0, align 4
@SA_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @smb_disable_share_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smb_disable_share_one(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [7 x i8*], align 16
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** @NET_CMD_PATH, align 8
  %7 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 0
  store i8* %6, i8** %7, align 16
  %8 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %8, align 8
  %9 = load i8*, i8** @NET_CMD_ARG_HOST, align 8
  %10 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 2
  store i8* %9, i8** %10, align 16
  %11 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 3
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i8** %11, align 8
  %12 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 4
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8** %12, align 16
  %13 = load i8*, i8** %3, align 8
  %14 = call i8* @strdup(i8* %13)
  %15 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 5
  store i8* %14, i8** %15, align 8
  %16 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 6
  store i8* null, i8** %16, align 16
  %17 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 0
  %18 = load i8*, i8** %17, align 16
  %19 = getelementptr inbounds [7 x i8*], [7 x i8*]* %5, i64 0, i64 0
  %20 = call i32 @libzfs_run_process(i8* %18, i8** %19, i32 0)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %1
  %24 = load i32, i32* @SA_SYSTEM_ERR, align 4
  store i32 %24, i32* %2, align 4
  br label %27

25:                                               ; preds = %1
  %26 = load i32, i32* @SA_OK, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %23
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32 @libzfs_run_process(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
